--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,7 @@ runs:
   using: composite
   steps:
     - name: "Setup the environment"
+      shell: bash
       run: |
         if [ ${{ github.ref }} == 'refs/heads/main' ]; then
           echo "::set-output name=runner::ubuntu-latest"
